NEXT-391 - Add truncate to all main grids, new design for context menu

--- a/Resources/administration/src/app/component/context-menu/sw-context-button/sw-context-button.html.twig
+++ b/Resources/administration/src/app/component/context-menu/sw-context-button/sw-context-button.html.twig
@@ -2,7 +2,9 @@
     <div class="sw-context-button" @click="openMenu" ref="swContextButton">
         {% block sw_context_button_button %}
             <slot name="button">
-                <sw-icon name="default-action-more-horizontal" decorative></sw-icon>
+                <button class="sw-context-button__button" :class="{ 'is--active': showMenu }">
+                    <sw-icon name="default-action-more-horizontal" decorative></sw-icon>
+                </button>
             </slot>
         {% endblock %}
 
